Add autotools generated files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,22 @@
 *.o
 *.a
+.libs
+.deps
+Makefile
+Makefile.in
+aclocal.m4
+autom4te.cache
+config.guess
+config.h
+config.log
+config.status
+config.sub
+configure
+depcomp
+install-sh
+libtool
+ltmain.sh
+missing
+*.lo
+*.la
+stamp-h1
