Move max() to util.h

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,13 @@
 include_HEADERS = jansson.h
 
 lib_LTLIBRARIES = libjansson.la
-libjansson_la_SOURCES = dump.c hashtable.h hashtable.c load.c value.c
+libjansson_la_SOURCES = \
+	dump.c \
+	hashtable.c \
+	hashtable.h \
+	load.c \
+	util.h \
+	value.c
 libjansson_la_LDFLAGS = -version-info 0:0:0
 
 AM_CFLAGS = -Wall -Wextra -std=c99
