--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,9 +5,12 @@ libjansson_la_SOURCES = \
 	dump.c \
 	hashtable.c \
 	hashtable.h \
+	jansson_private.h \
 	load.c \
 	strbuffer.c \
 	strbuffer.h \
+	utf.c \
+	utf.h \
 	util.h \
 	value.c
 libjansson_la_LDFLAGS = -version-info 0:0:0
