Add test for numbers

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,6 +1,6 @@
 check_PROGRAMS = \
 	loadf_dumpf loads_dumps load_file_dump_file \
-	testprogs/test_object testprogs/test_array
+	testprogs/test_array testprogs/test_number testprogs/test_object
 
 AM_CPPFLAGS = -I$(top_srcdir)/src
 AM_CFLAGS = -Wall -Werror
