test: Add Makefile.am to test/testprogs
This way it's an individual subdirectory and things go easier.

--- a/configure.ac
+++ b/configure.ac
@@ -23,5 +23,6 @@ AC_CONFIG_FILES([
         doc/Makefile
         src/Makefile
         test/Makefile
+        test/testprogs/Makefile
 ])
 AC_OUTPUT
