Distribute appropriate files

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,4 +1,4 @@
-EXTRA_DIST = conf.py apiref.rst index.rst
+EXTRA_DIST = conf.py apiref.rst index.rst ext/refcounting.py
 
 clean-local:
 	rm -rf .build
