--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,3 +1,4 @@
+DIST_SUBDIRS = testprogs testdata
 SUBDIRS = testprogs
 
 check_PROGRAMS = loadf_dumpf loads_dumps load_file_dump_file
@@ -8,6 +9,14 @@ LDFLAGS = -static  # for speed and Valgrind
 LDADD = ../src/libjansson.la
 
 TESTS = test-api test-invalid test-valid
+
+EXTRA_DIST = \
+	test-api \
+	test-invalid \
+	test-valid \
+	run-test \
+	json-compare.py \
+	split-testfile.py
 
 clean-local:
 	rm -rf testlogs
