--- a/test/testprogs/Makefile.am
+++ b/test/testprogs/Makefile.am
@@ -2,7 +2,7 @@ check_PROGRAMS = test_array test_number test_object
 
 test_array_SOURCES = test_array.c util.h
 test_number_SOURCES = test_number.c util.h
-test_object_SOURCES = test_number.c util.h
+test_object_SOURCES = test_object.c util.h
 
 AM_CPPFLAGS = -I$(top_srcdir)/src
 AM_CFLAGS = -Wall -Werror
