json_load_file: Initialize the error struct properly
Failing to do this has the effect that the error message is not
returned when the input file cannot be opened (e.g. if it doesn't
exist).

Thanks to Martin Vopatek for reporting.

--- a/test/.gitignore
+++ b/test/.gitignore
@@ -3,6 +3,7 @@ loads_dumps
 load_file_dump_file
 testlogs
 testprogs/test_array
+testprogs/test_load
 testprogs/test_number
 testprogs/test_object
 testprogs/test_simple
