Only export symbols starting with "json_" in libjansson.la
This way we don't pollute the symbol namespace with internal symbols.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -13,6 +13,8 @@ libjansson_la_SOURCES = \
 	utf.h \
 	util.h \
 	value.c
-libjansson_la_LDFLAGS = -version-info 1:1:1
+libjansson_la_LDFLAGS = \
+	-export-symbols-regex '^json_' \
+	-version-info 1:1:1
 
 AM_CFLAGS = -Wall -Wextra -Werror
