--- a/test/.gitignore
+++ b/test/.gitignore
@@ -1,6 +1,7 @@
 logs
 bin/json_process
 suites/api/test_array
+suites/api/test_equal
 suites/api/test_load
 suites/api/test_number
 suites/api/test_object
