Add pkg-config support
Thanks to Sean Middleditch for contributing.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,9 @@
 EXTRA_DIST = CHANGES LICENSE README.rst
 SUBDIRS = doc src test
 
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = jansson.pc
+
 distcheck-hook:
 	sphinx-build -b html -W \
 		$(distdir)/doc \
