--- a/test/suites/api/Makefile.am
+++ b/test/suites/api/Makefile.am
@@ -5,7 +5,8 @@ check_PROGRAMS = \
 	test_load \
 	test_simple \
 	test_number \
-	test_object
+	test_object \
+	test_cpp
 
 test_array_SOURCES = test_array.c util.h
 test_copy_SOURCES = test_copy.c util.h
@@ -13,6 +14,7 @@ test_load_SOURCES = test_load.c util.h
 test_simple_SOURCES = test_simple.c util.h
 test_number_SOURCES = test_number.c util.h
 test_object_SOURCES = test_object.c util.h
+test_cpp_SOURCES = test_cpp.cpp
 
 AM_CPPFLAGS = -I$(top_srcdir)/src
 AM_CFLAGS = -Wall -Werror
