Remove CHANGES preprocessing, as it didn't work with VPATH builds
The problem is that Sphinx can only read input files from a single
directory. In VPATH builds, the source and build trees are separate,
and the changes.rst went into the build tree.

This patch solves the issue by using cfunc as the Sphinx default role.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,19 +1,10 @@
-EXTRA_DIST = \
-	conf.py apiref.rst gettingstarted.rst github_commits.c index.rst \
-	tutorial.rst ext/refcounting.py
+EXTRA_DIST = conf.py apiref.rst changes.rst gettingstarted.rst		\
+	github_commits.c index.rst tutorial.rst ext/refcounting.py
 
 SPHINXBUILD = sphinx-build
 SPHINXOPTS = -d _build/doctrees -W
 
-# Convert json_*() functions to :cfunc: cross references in
-# ../CHANGES, and add a header from changes.rst.in
-changes.rst: changes.rst.in ../CHANGES
-	set -e; \
-	cat changes.rst.in >$@; \
-	sed -r -e 's/``(json_[a-z_]+\(\))``/:cfunc:`\1`/g' ../CHANGES \
-		>>$@
-
-html-local: changes.rst
+html-local:
 	$(SPHINXBUILD) -b html $(SPHINXOPTS) $(srcdir) _build/html
 
 install-html-local: html
