C++: Rename jansson-impl.hpp to jansson.ipp
The .ipp suffix is for inlined template implementation code.

While at it, use #ifdef and #ifndef instead of #if defined().

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,4 @@
-include_HEADERS = jansson.h jansson.hpp jansson-impl.hpp
+include_HEADERS = jansson.h jansson.hpp jansson.ipp
 
 lib_LTLIBRARIES = libjansson.la
 libjansson_la_SOURCES = \
