Make int32_t available on all systems
Use AC_TYPE_INT32_T and include inttypes.h (if it exists) instead of
stdint.h for maximum portability.

--- a/configure.ac
+++ b/configure.ac
@@ -15,6 +15,7 @@ AC_PROG_LIBTOOL
 # Checks for header files.
 
 # Checks for typedefs, structures, and compiler characteristics.
+AC_TYPE_INT32_T
 
 # Checks for library functions.
 
