Support compilers that don't have the "inline" keyword
Use AC_C_INLINE autoconf macro, include config.h where needed, and add
a define of JSON_INLINE to jansson.h that has the correct "inline"
keyword.

--- a/configure.ac
+++ b/configure.ac
@@ -17,6 +17,14 @@ AC_PROG_LIBTOOL
 # Checks for typedefs, structures, and compiler characteristics.
 AC_TYPE_INT32_T
 
+AC_C_INLINE
+case $ac_cv_c_inline in
+    yes) json_inline=inline;;
+    no) json_inline=;;
+    *) json_inline=$ac_cv_c_inline;;
+esac
+AC_SUBST([json_inline])
+
 # Checks for library functions.
 
 AC_CONFIG_FILES([
@@ -24,6 +32,7 @@ AC_CONFIG_FILES([
         Makefile
         doc/Makefile
         src/Makefile
+        src/jansson.h
         test/Makefile
         test/bin/Makefile
         test/suites/Makefile
