--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,5 +1,6 @@
-EXTRA_DIST = conf.py apiref.rst changes.rst gettingstarted.rst		\
-	github_commits.c index.rst tutorial.rst ext/refcounting.py
+EXTRA_DIST = conf.py apiref.rst changes.rst conformance.rst		\
+	gettingstarted.rst github_commits.c index.rst tutorial.rst	\
+	ext/refcounting.py
 
 SPHINXBUILD = sphinx-build
 SPHINXOPTS = -d _build/doctrees -W
