Zero the visited flag after encoding an empty array or object
Encoding an empty array or object worked, but encoding it again
(possibly after adding some items) failed, because the visited flag
(used for detecting circular references) wasn't zeroed.

--- a/test/.gitignore
+++ b/test/.gitignore
@@ -3,6 +3,7 @@ bin/json_process
 suites/api/test_array
 suites/api/test_equal
 suites/api/test_copy
+suites/api/test_dump
 suites/api/test_load
 suites/api/test_number
 suites/api/test_object
