--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -17,4 +17,7 @@ libjansson_la_LDFLAGS = \
 	-export-symbols-regex '^json_' \
 	-version-info 3:0:3
 
+if GCC
+# These flags are gcc specific
 AM_CFLAGS = -Wall -Wextra -Werror
+endif
