--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -3,7 +3,7 @@ EXTRA_DIST = conf.py apiref.rst changes.rst conformance.rst		\
 	ext/refcounting.py
 
 SPHINXBUILD = sphinx-build
-SPHINXOPTS = -d _build/doctrees -W
+SPHINXOPTS = -d _build/doctrees $(SPHINXOPTS_EXTRA)
 
 html-local:
 	$(SPHINXBUILD) -b html $(SPHINXOPTS) $(srcdir) _build/html
