--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -11,7 +11,8 @@ libjansson_la_SOURCES = \
 	strbuffer.h \
 	utf.c \
 	utf.h \
-	value.c
+	value.c \
+	variadic.c
 libjansson_la_LDFLAGS = \
 	-export-symbols-regex '^json_' \
 	-version-info 3:0:3
