Enhance error reporting
This patch adds two new fields to the json_error_t struct: column and
source. It also adds functions to populate json_error_t internally.

The column field is not currently used, but it will be utilized in the
decoder and pack/unpack functions.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,6 +3,7 @@ include_HEADERS = jansson.h jansson_config.h
 lib_LTLIBRARIES = libjansson.la
 libjansson_la_SOURCES = \
 	dump.c \
+	error.c \
 	hashtable.c \
 	hashtable.h \
 	jansson_private.h \
