--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,12 +8,12 @@ libjansson_la_SOURCES = \
 	hashtable.h \
 	jansson_private.h \
 	load.c \
+	pack_unpack.c \
 	strbuffer.c \
 	strbuffer.h \
 	utf.c \
 	utf.h \
-	value.c \
-	variadic.c
+	value.c
 libjansson_la_LDFLAGS = \
 	-export-symbols-regex '^json_' \
 	-version-info 3:0:3
