--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,9 @@
 EXTRA_DIST = CHANGES LICENSE README.rst
 SUBDIRS = doc src test
 
-check-doc:
+# "make distcheck" builds the dvi target, so use it to check that the
+# documentation is built correctly.
+dvi:
 	$(MAKE) SPHINXOPTS_EXTRA=-W html
 
 pkgconfigdir = $(libdir)/pkgconfig
