test file for new json_dump_callback function

--- a/test/suites/api/Makefile.am
+++ b/test/suites/api/Makefile.am
@@ -4,6 +4,7 @@ check_PROGRAMS = \
 	test_array \
 	test_copy \
 	test_dump \
+	test_dump_callback \
 	test_equal \
 	test_load \
 	test_loadb \
@@ -17,6 +18,7 @@ check_PROGRAMS = \
 test_array_SOURCES = test_array.c util.h
 test_copy_SOURCES = test_copy.c util.h
 test_dump_SOURCES = test_dump.c util.h
+test_dump_callback_SOURCES = test_dump_callback.c util.h
 test_load_SOURCES = test_load.c util.h
 test_loadb_SOURCES = test_loadb.c util.h
 test_memory_funcs_SOURCES = test_memory_funcs.c util.h
