--- a/test/.gitignore
+++ b/test/.gitignore
@@ -4,6 +4,7 @@ suites/api/test_array
 suites/api/test_copy
 suites/api/test_cpp
 suites/api/test_dump
+suites/api/test_dump_callback
 suites/api/test_equal
 suites/api/test_load
 suites/api/test_loadb
