--- a/src/jansson_config.h.in
+++ b/src/jansson_config.h.in
@@ -31,4 +31,8 @@
    JSON_INTEGER_IS_LONG_LONG is defined to 1, otherwise to 0. */
 #define JSON_INTEGER_IS_LONG_LONG @json_have_long_long@
 
+/* If locale.h and localeconv() are available, define to 1,
+   otherwise to 0. */
+#define JSON_HAVE_LOCALECONV @json_have_localeconv@
+
 #endif
