Make sure strtoll() is available when using long long

--- a/src/jansson_config.h.in
+++ b/src/jansson_config.h.in
@@ -27,8 +27,9 @@
 #define JSON_INLINE @json_inline@
 #endif
 
-/* If your compiler supports the `long long` type,
-   JSON_INTEGER_IS_LONG_LONG is defined to 1, otherwise to 0. */
+/* If your compiler supports the `long long` type and the strtoll()
+   library function, JSON_INTEGER_IS_LONG_LONG is defined to 1,
+   otherwise to 0. */
 #define JSON_INTEGER_IS_LONG_LONG @json_have_long_long@
 
 /* If locale.h and localeconv() are available, define to 1,
