Fixes for cmake for MSVC2010

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,14 +74,14 @@ check_type_size (__int32 __INT32)
 check_type_size ("long" LONG_INT)
 check_type_size ("int" INT)
 
-if (HAVE___INT32)
+if (HAVE_INT32_T)
+   set (JSON_INT32 int32_t)
+elseif (HAVE___INT32)
    set (JSON_INT32 __int32)
 elseif (HAVE_LONG AND (${LONG_INT} EQUAL 4))
    set (JSON_INT32 long)
 elseif (HAVE_INT AND (${INT} EQUAL 4))
    set (JSON_INT32 int)
-elseif (HAVE_INT32_T)
-   set (JSON_INT32 int32_t)
 else ()
    message (FATAL_ERROR "Could not detect a valid 32 bit integer type")
 endif ()
