--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: c
 compiler:
   - gcc
   - clang
-script: autoreconf -f -i && ./configure && make && make test
+script: autoreconf -f -i && ./configure && make check
