--- a/Makefile.am
+++ b/Makefile.am
@@ -11,5 +11,5 @@ pkgconfig_DATA = jansson.pc
 
 if GCC
 # These flags are gcc specific
-export AM_CFLAGS = -Wall -Wextra -Wdeclaration-after-statement -Werror
+export AM_CFLAGS = -Wall -Wextra -Wdeclaration-after-statement
 endif
