--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,11 +53,11 @@ project (jansson C)
 # Options
 OPTION (BUILD_SHARED_LIBS "Build shared libraries." OFF)
 
-IF(MSVC)
+if (MSVC)
    # This option must match the settings used in your program, in particular if you
 	# are linking statically
 	OPTION( STATIC_CRT "Link the static CRT libraries" OFF )
-ENDIF()
+endif ()
 
 # Set some nicer output dirs.
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
@@ -67,10 +67,10 @@ SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
 # Give the debug version a different postfix for windows,
 # so both the debug and release version can be built in the
 # same build-tree on Windows (MSVC).
-IF (WIN32)
+if (WIN32)
    SET (CMAKE_DEBUG_POSTFIX "_d")
-ELSE (WIN32)
-ENDIF (WIN32)
+else (WIN32)
+endif (WIN32)
 
 # This is how I thought it should go
 # set (JANSSON_VERSION "2.3.1")
