--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,10 +76,10 @@ endif (WIN32)
 # set (JANSSON_VERSION "2.3.1")
 # set (JANSSON_SOVERSION 2)
 
-set(JANSSON_DISPLAY_VERSION "2.5-dev")
+set(JANSSON_DISPLAY_VERSION "2.5")
 
 # This is what is required to match the same numbers as automake's
-set (JANSSON_VERSION "4.3.1")
+set (JANSSON_VERSION "4.5.0")
 set (JANSSON_SOVERSION 4)
 
 # for CheckFunctionKeywords
